// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieItem component matches snapshot with actions 1`] = `
<Card
  actions={
    Array [
      <div>
        Remove item
      </div>,
    ]
  }
  className="movie-item top-margin"
  cover={
    <Link
      className="movie-item__img"
      style={
        Object {
          "backgroundImage": "none",
        }
      }
      to="/movie/1"
    />
  }
>
  <Meta
    description="Decades after Sarah Connor prevented Judgment Day."
    title="Terminator: Dark Fate"
  />
</Card>
`;

exports[`MovieItem component matches snapshot with poster 1`] = `
<Card
  actions={Array []}
  className="movie-item top-margin"
  cover={
    <Link
      className="movie-item__img"
      style={
        Object {
          "backgroundImage": "url(https://image.tmdb.org/t/p/w300_and_h450_bestv2//vqzNJRH4YyquRiWxCCOH0aXggHI.jpg)",
        }
      }
      to="/movie/1"
    />
  }
>
  <Meta
    description="Decades after Sarah Connor prevented Judgment Day."
    title="Terminator: Dark Fate"
  />
</Card>
`;

exports[`MovieItem component matches snapshot with required props 1`] = `
<Card
  actions={Array []}
  className="movie-item top-margin"
  cover={
    <Link
      className="movie-item__img"
      style={
        Object {
          "backgroundImage": "none",
        }
      }
      to="/movie/1"
    />
  }
>
  <Meta
    description="Decades after Sarah Connor prevented Judgment Day."
    title="Terminator: Dark Fate"
  />
</Card>
`;
